# Aegisub

./: .cproject  .gitignore  .project  Makefile.inc.in  Makefile.target  build.txt  configure.ac  header.mk  meson.build  meson_options.txt  mingw64cc.txt
libaegisub/: Makefile  meson.build
libaegisub/audio/: provider_convert.cpp  provider_hd.cpp  provider_lock.cpp  provider_ram.cpp
libaegisub/common/: character_count.cpp  charset.cpp  dispatch.cpp  file_mapping.cpp  option.cpp  option_value.cpp  util.cpp
libaegisub/include/libaegisub/: option.h  option_value.h
libaegisub/unix/: path.cpp
libaegisub/windows/: fs.cpp  path_win.cpp  util_win.cpp
src/: Makefile  MatroskaParser.c  aegisublocale.cpp  aegisublocale.h  audio_box.cpp  audio_box.h  audio_colorscheme.cpp  audio_colorscheme.h  audio_controller.h  audio_display.cpp  audio_display.h  audio_marker.cpp  audio_marker.h  audio_player.cpp  audio_player_oss.cpp  audio_provider_factory.cpp  audio_provider_ffmpegsource.cpp  audio_renderer.cpp  audio_renderer.h  audio_renderer_spectrum.cpp  audio_renderer_spectrum.h  audio_renderer_waveform.cpp  audio_renderer_waveform.h  audio_timing.h  audio_timing_dialogue.cpp  audio_timing_karaoke.cpp  base_grid.cpp  base_grid.h  context.cpp  dialog_about.cpp  dialog_colorpicker.cpp  dialog_detached_video.cpp  dialog_fonts_collector.cpp  dialog_log.cpp  dialog_manager.h  dialog_progress.cpp  dialog_style_manager.cpp  dialog_video_properties.cpp  dialogs.h  ffmpegsource_common.cpp  (+42 more)
src/bitmaps/: manifest.respack
src/command/: app.cpp  command.cpp  recent.cpp  subtitle.cpp
src/include/aegisub/: context.h
src/libresrc/: default_config.json  default_menu.json  meson.build
src/libresrc/osx/: default_config.json  default_menu.json
src/res/: res.rc
tests/: Makefile
tools/: version.sh
